--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
+
   <%= javascript_importmap_tags %>
 </head>
 
@@ -25,7 +27,7 @@
   </header>
 <% end %>
 
-<main class="container mx-auto mt-28 px-5 flex">
+<main class="<%= 'container mx-auto mt-28 px-5 flex' if show_header_and_footer? %>">
   <%= yield %>
 </main>
 
