参加申請フロー完全完了

--- a/app/views/components/form/_text_field.html.erb
+++ b/app/views/components/form/_text_field.html.erb
@@ -1,11 +1,16 @@
 <% unless title.blank? %>
   <%= f.label key, title, class: "block text-sm font-medium leading-6 text-gray-900" %>
 <% end %>
-<div class="mt-2">
-  <%= f.text_field key, placeholder: placeholder, value: value, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-kindai-100 sm:text-sm sm:leading-6  disabled:bg-gray-100" %>
-</div>
 <% if (defined? errors) && errors.include?(key) %>
   <div class="text-red-500 text-sm font-light">
     <%= errors.full_messages_for(key).first %>
   </div>
 <% end %>
+<div class="mt-2">
+  <%= f.text_field key,
+                   placeholder: placeholder,
+                   class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-kindai-100 sm:text-sm sm:leading-6  disabled:bg-gray-100",
+                   disabled: defined?(disabled) ? disabled : false
+
+  %>
+</div>
