--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, '申請完了') %>
+<% provide(:title, '参加申請') %>
 <div class="flex flex-wrap items-center justify-center content-center mx-auto px-5 max-w-lg my-10" style="min-height: 100vh">
   <div class="row flex-none w-full">
     <%= image_tag "logo-bottom.png" %>
