イベント実装

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,6 @@
-<div class="container-fluid text-center py-1" style="background: var(--kithub-blue); color: #fff">
-  © 2022-2023 KINDAI Info-Tech HUB
+<div class="text-center px-2 py-5 bg-kindai text-white leading-loose">
+  © 2022-2023 <%= link_to "KINDAI Info-Tech HUB", "https://kithub.jp" %>
+  <div class="text-sm">
+    <%= link_to "プライバシーポリシー", root_path %> / <%= link_to "活動規約", root_path %>
+  </div>
 </div>
