--- a/app/views/registrations/complete.html.erb
+++ b/app/views/registrations/complete.html.erb
@@ -13,7 +13,7 @@
     <div class="text-xl font-semibold px-2 py-1 text-kindai">
       参加申請が完了しました
     </div>
-    <div class="text-xl font-light px-2 py-1 text-kindai">
+    <div class="text-md font-light px-2 py-1 text-kindai">
       数日以内にメールにてご連絡致します
     </div>
   </div>
